--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type="password" id="password" name="password" required />
               </li>
               <li>
-                <label class="required" for="confirmPassword">Confirmar Senha</label>
+                <label class="required" for="confirmPassword">Repetir senha</label>
                 <input type="password" id="confirmPassword" name="confirmPassword" required />
               </li>
             </div>
