#ts/form Inclusao DadosPessoais

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
           <br />
           <fieldset>
             <legend>Dados Pessoais</legend>
+            <ul class="column">
+              <li class="radioPersonal">
+                <input type="radio" id="individual" name="fav_language" value="individual" />
+                <label for="individual">Pessoa Física</label>
+                <input type="radio" id="legalEntity" name="fav_language" value="legalEntity" />
+                <label for="legalEntity">Pessoa Jurídica</label>
+              </li>
+              <li>
+                <label class="required" for="name">Nome</label>
+                <input type="text" id="name" name="name" required />
+              </li>
+            </ul>
           </fieldset>
           <br />
           <br />
