#ts/form Ajustes Radio

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <legend>Dados Pessoais</legend>
             <ul class="column">
               <li class="radioPersonal">
-                <input type="radio" id="individual" name="fav_language" value="individual" />
+                <input type="radio" id="individual" name="personal" value="individual" checked />
                 <label for="individual">Pessoa Física</label>
-                <input type="radio" id="legalEntity" name="fav_language" value="legalEntity" />
+                <input type="radio" id="legalEntity" name="personal" value="legalEntity" />
                 <label for="legalEntity">Pessoa Jurídica</label>
               </li>
               <li>
