#ts/form Ajustes Tela Cadastro

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <br />
           <br />
           <br />
-          <div class="flex">
+          <div class="containerField">
             <fieldset>
               <legend>Dados Pessoais&nbsp;</legend>
               <ul class="column">
